add plugin.misterpah.ProjectTree (initial work)

--- a/bin/index.html
+++ b/bin/index.html
@@ -21,17 +21,20 @@
 		margin-left:0px !important;
 		margin-right:0px !important;
 		}
+		body{
+		overflow:hidden !important;
+		}
 	</style>
 </head>
 
-<body style="overflow:hidden">
+<body>
 	<div id="haxe:trace"></div>
 	<div style="position:absolute;top:50px;left:0px;width:100%;z-index:999;" id='notify_position'></div>
 	
-	<div class="container" style="padding-left:0px;padding-right:0px;">
+	<div class="" style="padding-left:0px;padding-right:0px;margin:0px;">
 		<div class="row no-gutter" style="padding-left:0px;padding-right:0px;">
-			<div class="col-xs-12">
-				<div class="navbar navbar-default navbar-fixed-top">
+			<div class="col-xs-12 no-gutter">
+				<div class="navbar navbar-default" style="-webkit-border-radius: 0 0 0 0;margin:0px;">
 					<div class="navbar-header">
 						<a class="navbar-brand" >HIDE</a>
 					</div>
@@ -43,7 +46,7 @@
 		</div>
 	</div>
 
-	<div style="height:50px;clear:both;"></div>
+	<div style="clear:both;"></div>
 	
 	
 	
