--- a/bin/index.html
+++ b/bin/index.html
@@ -24,24 +24,54 @@
 		body{
 		overflow:hidden !important;
 		}
+	
+		.nodrag {
+		-webkit-app-region: no-drag !important;
+		}
+
+		#border_wrap
+		{
+		position:absolute;
+		left:0px;
+		top:0px;
+		border:1px solid #e7e7e7;
+		z-index:-1;
+		}
+		
+		#nav-button
+		{
+		position:absolute;
+		top:10px;
+		right:10px;
+		z-index:10001;
+		-webkit-app-region: no-drag !important;
+		}
+		
+		
 	</style>
+	
 </head>
 
 <body>
+
 	<div id="haxe:trace"></div>
 	<div style="position:absolute;top:50px;left:0px;width:100%;z-index:999;" id='notify_position'></div>
 	
 	<div class="" style="padding-left:0px;padding-right:0px;margin:0px;">
-		<div class="row no-gutter" style="padding-left:0px;padding-right:0px;">
+		<div class="row no-gutter" style="padding-left:0px;padding-right:0px; ">
 			<div class="col-xs-12 no-gutter">
-				<div class="navbar navbar-default" style="-webkit-border-radius: 0 0 0 0;margin:0px;">
+				<div class=" navbar navbar-default" style="-webkit-border-radius: 0 0 0 0;margin:0px;">
 					<div class="navbar-header">
 						<a class="navbar-brand" >HIDE</a>
 					</div>
+
 					<div class="navbar-collapse collapse">
-						<ul id="position-navbar" class="nav navbar-nav"></ul>			
+						<ul id="position-navbar" class="nodrag nav navbar-nav"></ul>			
 					</div><!--/.nav-collapse -->
-				</div> <!-- /nav -->			
+					
+				</div> <!-- /nav -->		
+
+
 			</div>
 		</div>
 	</div>
