--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,9 @@
 	<script src="./js/jquery.keystroke.min.js"></script>	
 	
 	<script src="./js/bootstrap/bootstrap.min.js"></script>	
+	<script src="./js/bootstrap/bootstrap-select.min.js"></script>	
+	<link href="./css/bootstrap-select.min.css" rel="stylesheet" media="screen">
+	
 	<script src="./js/node.dir.walker.js"></script>	
 	<link href="./css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="./css/bootstrap-glyphicons.css" rel="stylesheet" media="screen">
