--- a/bin/index.html
+++ b/bin/index.html
@@ -9,7 +9,8 @@
 	<script src="./js/bootstrap/bootstrap-select.min.js"></script>	
 	<link href="./css/bootstrap-select.min.css" rel="stylesheet" media="screen">
 	
-	<script src="./js/node.dir.walker.js"></script>	
+	<script src="./js/node.dir.walker.js"></script>
+	<script src="./js/cputime.js"></script>		
 	<link href="./css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="./css/bootstrap-glyphicons.css" rel="stylesheet" media="screen">
 	
